modules/wycs/tests/valid/test_059.wycs
predicate NatSet({int} xs) where forall [ int x : x in xs ==> x >= 0 ]

assert forall [ int x, {int} xs :
       NatSet(xs) && x in xs ==> x >= 0
]