modules/wycs/tests/invalid/test_054.wycs
assert forall [ {int} xs, {int} ys, {int} zs :
       (xs ⊆ ys && zs ⊆ ys) ==> xs ⊆ zs
]